# ProceduralImagePainter

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vite.config.ts
src/: gifenc.d.ts  main.js  main.ts  painter.js  painter.ts  style.css
