[project]
name = "proceduralimagepainter"
version = "0.1.0"
description = "CLI tool to render a phrase over a B&W image as typographic halftone art"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "typer>=0.15.0",
]

[project.scripts]
painter = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["main.py"]
